[tool.poetry]
name = "mrmustard"
version = "0.7.3"
description = "Differentiable quantum Gaussian circuits"
authors = ["Xanadu <filippo@xanadu.ai>"]
license = "Apache License 2.0"
readme = "README.md"
include = ["julia_pkg/*"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: POSIX",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Physics",
]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
grpcio = "1.60.0"
numpy = "^1.23.5"
scipy = "^1.8.0"
numba = "^0.59"
thewalrus = "^0.19.0"
rich = "^10.15.1"
matplotlib = "^3.5.0"
ray = { version = "^2.5.0", extras = ["tune"], optional = true }
scikit-optimize = { version = "^0.9.0", optional = true }
networkx = "^3.1"
julia = "0.6.1"
ipython = ">=8.18.1"

######################  The Tensorflow Section ###################### 
# Dedicated for making sure that poetry can install tensorflow on all platforms.
# This hopefully is a temporary workaround, pending TF starting doing a good job with their pypi release metadata.

# Issue between poetry and tensorflow metadata since >=2.11
# related to https://github.com/python-poetry/poetry/issues/8271
# Inspired from https://github.com/tensorflow/tensorflow/blob/adb39b04e9cb116df4659a7e2de9eea27e62f25c/tensorflow/tools/pip_package/setup.py#L148-L162
tensorflow = {version = "^2.15.0" }
tensorflow-macos = { version = "2.15.0", platform = "darwin", markers = "platform_machine=='arm64'" }
tensorflow-intel = { version = "^2.15.0", platform = "win32" }
# Disabled to prevent taking over GPU:
# tensorflow-cpu = [
#     { version = "^2.15.0", platform = "linux", markers = "platform_machine!='arm64' and platform_machine!='aarch64'" },
#     { version = "^2.15.0", platform = "darwin", markers = "platform_machine!='arm64' and platform_machine!='aarch64'" },]
tensorflow-cpu-aws = { version = "^2.15.0", platform = "linux", markers = "platform_machine=='arm64' or platform_machine=='aarch64'" }
# https://github.com/tensorflow/tensorflow/blob/adb39b04e9cb116df4659a7e2de9eea27e62f25c/tensorflow/tools/pip_package/setup.py#L107-L108
# https://github.com/python-poetry/poetry/issues/8271#issuecomment-1697740447
tensorflow-io-gcs-filesystem = [
    { version = ">= 0.23.1", markers = "platform_machine!='arm64' or platform_system!='Darwin'" },
    { version = "< 0.32.0", markers = "platform_system == 'Windows'" }
]
tensorflow-probability = "^0.22.0"

[tool.poetry.extras]
ray = ["ray", "scikit-optimize"]

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "8.0"
pytest-cov ="3.0.0"
hypothesis = "6.31.6"
pylint = "^3.0"
black = ">=22.1.0"

[tool.poetry.group.doc]
optional = true

[tool.poetry.group.doc.dependencies]
sphinx = "^7.0.1"
docutils = "^0.20.1"
m2r2 = "^0.3.3.post2"
sphinx-autodoc-typehints = "^1.23.3"
sphinx-copybutton = "^0.5.2"
sphinx-automodapi = "^0.15.0"
sphinxcontrib-bibtex = "^2.5.0"
mistune = "0.8.4"
xanadu-sphinx-theme = "0.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
