[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "mrmustard"
version = "1.0.0-dev"
description = "Differentiable quantum Gaussian circuits"
authors = [
    {name= "Xanadu", email= "filippo@xanadu.ai"},
]
license = {text = "Apache License 2.0"}
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: POSIX",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Physics",
]
requires-python = ">=3.10,<3.13"
dependencies = [
    "grpcio == 1.60.0",
    "numpy >=2.0.0, <3",
    "scipy >=1.8.0, <2",
    "numba >=0.59, <1",
    "thewalrus >=0.19.0,<1",
    "rich >=13.9.0, <14",
    "matplotlib >=3.5.0, <4",
    "networkx >=3.1, <4",
    "ipython >=8.18.1",
    "plotly >=5.20.0, <6",
    "nbformat >=5.10, <6",
    "ipywidgets >=8.1.3, <9",
    "tensorflow >=2.15.0, <2.19.0",
    "tensorflow-probability[tf] >=0.22.0,<1.0",
    "tensorflow-intel>=2.15.0, <3; sys_platform == 'win32'",
    "tensorflow-io-gcs-filesystem <0.32.0; (sys_platform == 'win32' and python_version < '3.12')",
    "tensorflow-io-gcs-filesystem >= 0.23.1; (sys_platform != 'win32' and python_version < '3.12')",
    "semantic-version >=2.10.0, <3",
    "equinox>=0.11.10",
    "optax>=0.2.4,<0.3",
    "importlib-resources>=6.5.2,<7",
]

[dependency-groups]
dev = [
    "pre-commit==3.7.1",
    "pytest==8.0",
    "pytest-cov==3.0.0",
    "hypothesis==6.31.6",
    "pylint>=3.0,<4",
    "black==22.12.0",
]

doc = [
    "sphinx>=7.0.1,<8",
    "docutils>=0.20.1,<0.21",
    "m2r2>=0.3.3.post2,<1",
    "sphinx-autodoc-typehints>=1.23.3,<2",
    "sphinx-copybutton>=0.5.2,<1",
    "sphinx-automodapi>=0.15.0,<1",
    "sphinxcontrib-bibtex>=2.5.0,<3",
    "mistune==0.8.4",
    "xanadu-sphinx-theme==0.1.0",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.black]
line-length = 100

[tool.coverage.run]
source = ["mrmustard"]

[tool.coverage.report]
omit = ["mrmustard/training/*"]

# Regexes for lines to exclude from consideration
exclude_lines =[
    # Have to re-enable the standard pragma
    "pragma: no cover",

    # Don't complain about missing debug-only code:
    "def __repr__",
    "def __eq__",
    "if self\\.debug",

    # print statements
    "def __str__",
    "def __format__",
    "def _print_list",

    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",
    "raise NotApplicableError",
    "raise Exception",
    "raise ValueError",
    "raise ZeroDivisionError",
    "raise TypeError",
    "raise RuntimeError",
    "raise IndexError",
    "raise FileNotFoundError",
    "raise NotADirectoryError",
    "raise MergeFailure",
    "return __version__",
    "if len(lst) != self._num_modes:",
    "elif max(lst) >= self._trunc:",
    "except NotImplementedError as err",

    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "pass",
    "if __name__ == .__main__.:",
]

ignore_errors = true

[tool.coverage.html]
directory = "coverage_html_report"

[tool.pytest.ini_options]
filterwarnings = "ignore::DeprecationWarning"
